--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </div>
         <div>
           <!-- profile picture placeholder -->
-          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%232d3748' stroke='%235f6cff' stroke-width='3'/%3E%3Ctext x='50' y='67' font-size='16' text-anchor='middle' fill='%23aabbee' font-family='monospace'%3EPROFILE%3C/text%3E%3Ctext x='50' y='82' font-size='10' text-anchor='middle' fill='%23ccddf9'%3E(placeholder)%3C/text%3E%3C/svg%3E"
+          <img src="profile.jpg"
                alt="Hamza Shahid profile" class="profile-pic">
         </div>
       </div>
