--- a/index.html
+++ b/index.html
@@ -292,6 +292,15 @@
       .email-big { font-size: 1rem; padding: 0.8rem 1.5rem; }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3CHJL310F2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-3CHJL310F2');
+  </script>
 </head>
 <body>
   <nav>
