--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Hamza Shahid – Full Stack AI Engineer</title>
   <!-- SEO meta -->
   <meta name="description" content="Hamza Shahid – Full Stack AI Engineer building intelligent web systems, AI SaaS, and modern web applications. Located in Faisalabad, Pakistan.">
-  <meta name="keywords" content="Full Stack AI Engineer, React, Node.js, Python, LLM, AI Automation, MERN, Next.js, Pakistan">
+  <meta name="keywords" content="Hamza Shahid, AI Eng, Full Stack AI Engineer, React, Node.js, Python, LLM, AI Automation, MERN, Next.js, Pakistan">
   <meta name="author" content="Hamza Shahid">
   <!-- Open Graph (LinkedIn / social cards) -->
   <meta property="og:title" content="Hamza Shahid – Full Stack AI Engineer">
